added metatags, opengraph image and favicon

--- a/client-web/index.html
+++ b/client-web/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/ethora-favicon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/ethora-favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,7 +30,25 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Dappros Platform</title>
+    <!-- Primary Meta Tags -->
+      <title>Ethora - Web3 super app engine</title>
+      <meta name="title" content="Ethora - Web3 super app engine" />
+      <meta name="description" content="Ethora is a low-code and highly customisable web3 engine which means you can launch your own branded app into Appstore in no time." />
+      <link rel="canonical" href="https://beta.ethora.com/" />
+
+    <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://beta.ethora.com/" />
+      <meta property="og:title" content="Ethora - Web3 super app engine" />
+      <meta property="og:description" content="Ethora is a low-code and highly customisable web3 engine which means you can launch your own branded app into Appstore in no time." />
+      <meta property="og:image" content="/temp-meta.png" />
+
+    <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="https://beta.ethora.com/" />
+      <meta property="twitter:title" content="Ethora - Web3 super app engine" />
+      <meta property="twitter:description" content="Ethora is a low-code and highly customisable web3 engine which means you can launch your own branded app into Appstore in no time." />
+      <meta property="twitter:image" content="/temp-meta.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
